fix about us section spacing

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -476,6 +476,7 @@
 @media only screen and (min-width: 0rem) {
     #sbs-523 {
         padding: var(--sectionPadding);
+        padding-top: 31rem;
 
         @keyframes floatAnimation {
             0% {
@@ -603,6 +604,9 @@
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
     #sbs-523 {
+
+        padding-top: 13rem;
+        
         .cs-container {
             max-width: (1280/16rem);
             flex-direction: row;
